[package]
name = "rgetusers"
version = "0.1.0"
edition = "2021"
authors=["Paul J Barrett"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-iam="0.19.0"
aws-smithy-types="0.49.0"
tokio={version="1.21.2",features=["full"]}
aws-config="0.49.0"
